--- a/Views/Admin/AdminObjectives/Edit.cshtml
+++ b/Views/Admin/AdminObjectives/Edit.cshtml
@@ -13,8 +13,8 @@
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
                     <span class="govuk-caption-l govuk-!-margin-top-6">COMPASS admin</span>
-                    <h1 class="govuk-heading-xl">Edit objective</h1>
-                    <p class="govuk-body-l govuk-!-margin-bottom-0">Edit an existing DDT objective, Government Mission, Flagship programme or other strategic objective.</p>
+                    <h1 class="govuk-heading-xl">@Model.Title</h1>
+                    <p class="govuk-body-l govuk-!-margin-bottom-0">@Model.Reference</p>
                 </div>
             </div>
         </div>
@@ -24,34 +24,26 @@
 <div class="govuk-grid-row">
     <!-- Vertical Navigation -->
     <div class="govuk-grid-column-one-quarter">
-        <nav class="dfe-vertical-nav" data-module="dfe-vertical-nav">
-            <ul class="dfe-vertical-nav__section">
-                <li class="dfe-vertical-nav__section-item @(ViewData["ActiveNavItem"]?.ToString() == "dashboard" ? "dfe-vertical-nav__section-item--current" : "")">
-                    <a class="dfe-vertical-nav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="@Url.Action("Index", "Admin")">
-                        Dashboard
-                    </a>
-                </li>
-                <li class="dfe-vertical-nav__section-item @(ViewData["ActiveNavItem"]?.ToString() == "manage-metrics" ? "dfe-vertical-nav__section-item--current" : "")">
-                    <a class="dfe-vertical-nav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="@Url.Action("Index", "AdminPerformanceMetrics")">
-                        Manage Metrics
-                    </a>
-                </li>
-                <li class="dfe-vertical-nav__section-item @(ViewData["ActiveNavItem"]?.ToString() == "manage-users" ? "dfe-vertical-nav__section-item--current" : "")">
-                    <a class="dfe-vertical-nav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="@Url.Action("Index", "AdminUser")">
-                        Manage Users
-                    </a>
-                </li>
-                <li class="dfe-vertical-nav__section-item @(ViewData["ActiveNavItem"]?.ToString() == "manage-objectives" ? "dfe-vertical-nav__section-item--current" : "")">
-                    <a class="dfe-vertical-nav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="@Url.Action("Index", "AdminObjectives")">
-                        Manage objectives
-                    </a>
-                </li>
-            </ul>
-        </nav>
+        <a href="@Url.Action("Index")" class="govuk-back-link  govuk-!-margin-bottom-7">Back to objectives</a>
+                <nav class="dfe-vertical-nav" data-module="dfe-vertical-nav">
+                    <ul class="dfe-vertical-nav__section">
+                        <li class="dfe-vertical-nav__section-item @(ViewData["ActiveNavItem"]?.ToString() == "manage-objectives" ? "dfe-vertical-nav__section-item--current" : "")">
+                            <a class="dfe-vertical-nav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="@Url.Action("Details", new { id = Model.Id })">
+                                Objective details
+                            </a>
+                        </li>
+                        <li class="dfe-vertical-nav__section-item @(ViewData["ActiveNavItem"]?.ToString() == "linked-milestones" ? "dfe-vertical-nav__section-item--current" : "")">
+                            <a class="dfe-vertical-nav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="@Url.Action("Milestones", new { id = Model.Id })">
+                                Linked milestones
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
     </div>
 
     <!-- Main Content -->
     <div class="govuk-grid-column-three-quarters">
+     <h2 class="govuk-heading-l">Edit objective</h2>
                 <form asp-action="Edit" method="post">
                     <input asp-for="Id" type="hidden" />
                     <input asp-for="CreatedAt" type="hidden" />
