--- a/Views/Admin/Metrics/Index.cshtml
+++ b/Views/Admin/Metrics/Index.cshtml
@@ -81,8 +81,18 @@
                                 @foreach (var metric in Model)
                                 {
                                     <tr class="govuk-table__row">
-                                        <td class="govuk-table__cell"><a href="@Url.Action("Edit", new { id = metric.Id })">@metric.Name</a></td>
-                                        <td class="govuk-table__cell">@metric.Category</td>
+                                        <td class="govuk-table__cell">
+                                            <a href="@Url.Action("Details", new { id = metric.Id })" class="govuk-link">
+                                                @metric.Name
+                                            </a>
+                                            <br>
+                                            <span class="govuk-body-s govuk-!-font-weight-regular">@metric.UniqueId</span>
+                                        </td>
+                                        <td class="govuk-table__cell">
+                                            <span class="govuk-tag @GetCategoryTagClass(metric.Category)">
+                                                @metric.Category
+                                            </span>
+                                        </td>
                                     </tr>
                                 }
                             </tbody>
@@ -100,3 +110,18 @@
         </div>
     </div>
 </div>
+
+@functions {
+    string GetCategoryTagClass(string category)
+    {
+        return category switch
+        {
+            "User Experience" => "govuk-tag--green",
+            "Performance" => "govuk-tag--blue",
+            "Accessibility" => "govuk-tag--purple",
+            "Security" => "govuk-tag--red",
+            "Compliance" => "govuk-tag--yellow",
+            _ => "govuk-tag--grey"
+        };
+    }
+}
