--- a/Views/Reporting/Month.cshtml
+++ b/Views/Reporting/Month.cshtml
@@ -84,8 +84,9 @@
                 <nav class="dfe-vertical-nav">
                     <ul class="dfe-vertical-nav__section">
                         <li class="dfe-vertical-nav__section-item">
-                            <a href="@Url.Action("Index", "Reporting")" class="dfe-vertical-nav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline">
-                                ← Back to reports
+                           
+                            <a href="@Url.Action("Index", "Reporting")" class="govuk-back-link govuk-!-margin-top-0">
+                                Back to reports
                             </a>
                         </li>
                     </ul>
@@ -143,28 +144,29 @@
             <div class="govuk-grid-column-three-quarters">
                 @if (Model.CompletedServicesCount == Model.TotalServicesCount && Model.TotalServicesCount > 0 && !Model.IsSubmitted)
                 {
-                    <div class="govuk-notification-banner" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
+                    <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
                         <div class="govuk-notification-banner__header">
                             <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-                                Information
+                                Ready to submit
                             </h2>
                         </div>
                         <div class="govuk-notification-banner__content">
                             <p class="govuk-notification-banner__heading">
-                                All metrics have been completed all your products for @Model.FullMonthName. You can now submit this report.
+                                All metrics have been completed for all your products for @Model.FullMonthName. You can now submit this report.
                             </p>
-                            <form method="post" action="@Url.Action("SubmitReport", "Reporting", new { year = Model.Year, month = Model.Month.ToLower() })" class="form-margin-top">
-                                <button type="submit" class="govuk-button" data-module="govuk-button">
-                                    Submit report
-                                </button>
-                            </form>
+                            <p class="govuk-body">Go to the performance reporting page to submit your return.</p>
+                            <div class="govuk-button-group form-margin-top">
+                                <a href="@Url.Action("PerformanceByMonth", "Reporting", new { year = Model.Year, month = Model.Month.ToLower() })" class="govuk-button" data-module="govuk-button">
+                                    Go to performance reporting
+                                </a>
+                            </div>
                         </div>
                     </div>
                 }
              
 <h2 class="govuk-heading-l">Your products</h2>
 
-<p class="govuk-body">You are responsible for reporting on the performance of the following @Model.AssignedProducts.Count products.</p>
+<p class="govuk-body">You are responsible for reporting on the performance of the following products.</p>
               
 
                 <!-- Services Table -->
@@ -189,7 +191,7 @@
                             {
                                 <tr class="govuk-table__row">
                                     <td class="govuk-table__cell">
-                                        <a href="@Url.Action("Service", "Reporting", new { year = Model.Year, month = Model.Month.ToLower(), fipsId = product.FipsId })" class="govuk-link">
+                                        <a href="@Url.Action("PerformanceByProduct", "Reporting", new { year = Model.Year, month = Model.Month.ToLower(), fipsId = product.FipsId })" class="govuk-link">
                                             @product.Title
                                         </a>
                                         </td>
