--- a/Views/Reporting/Products.cshtml
+++ b/Views/Reporting/Products.cshtml
@@ -20,8 +20,6 @@
     </div>
 }
 
-<div class="govuk-width-container">
-    <div class="govuk-main-wrapper">
         <div class="govuk-grid-row">
             <!-- Vertical Navigation -->
             <div class="govuk-grid-column-one-quarter">
@@ -53,8 +51,8 @@
 
             <!-- Main Content -->
             <div class="govuk-grid-column-three-quarters">
-                <h2 class="govuk-heading-l">Assigned Services</h2>
-                <p class="govuk-body">Services you are responsible for reporting on.</p>
+                <h2 class="govuk-heading-l">Your products and services</h2>
+                <p class="govuk-body">Products and services you are responsible for reporting on.</p>
                 
                 @if (Model.AssignedProducts.Any())
                 {
@@ -114,5 +112,3 @@
                 }
             </div>
         </div>
-    </div>
-</div>
