--- a/Views/Admin/Metrics/Edit.cshtml
+++ b/Views/Admin/Metrics/Edit.cshtml
@@ -24,6 +24,7 @@
         <div class="govuk-grid-row">
             <!-- Vertical Navigation -->
             <div class="govuk-grid-column-one-quarter">
+                <a href="@Url.Action("Index")" class="govuk-back-link govuk-!-margin-bottom-7">Back to metrics</a>
                 <nav class="dfe-vertical-nav" data-module="dfe-vertical-nav">
                     <ul class="dfe-vertical-nav__section">
                         <li class="dfe-vertical-nav__section-item @(ViewData["ActiveNavItem"]?.ToString() == "dashboard" ? "dfe-vertical-nav__section-item--current" : "")">
