--- a/Views/Reporting/Milestones/Index.cshtml
+++ b/Views/Reporting/Milestones/Index.cshtml
@@ -1,98 +1,63 @@
-@model List<object>
+@model List<FipsReporting.Data.Milestone>
 
 @{
-    ViewData["Title"] = "Milestones";
-    ViewData["ActiveNav"] = "reporting";
-    ViewData["ActiveNavItem"] = "milestones";
-}
-
-@section BeforeContent {
-    <div class="dfe-masthead dfe-masthead--with-links">
-        <div class="govuk-width-container">
-            <div class="govuk-grid-row">
-                <div class="govuk-grid-column-full">
-                    <span class="govuk-caption-l govuk-!-margin-top-6">COMPASS reporting</span>
-                    <h1 class="govuk-heading-xl">Milestones</h1>
-                    <p class="govuk-body-l govuk-!-margin-bottom-0">Track and update milestones for your assigned services.</p>
-                </div>
-            </div>
-        </div>
-    </div>
+    ViewData["Title"] = "My Milestones";
+    ViewData["ActiveNav"] = "reporting-milestones";
 }
 
 <div class="govuk-width-container">
     <div class="govuk-main-wrapper">
         <div class="govuk-grid-row">
-            <!-- Vertical Navigation -->
-            <div class="govuk-grid-column-one-quarter">
-                <nav class="dfe-vertical-nav" data-module="dfe-vertical-nav">
-                    <ul class="dfe-vertical-nav__section">
-                        <li class="dfe-vertical-nav__section-item @(ViewData["ActiveNavItem"]?.ToString() == "dashboard" ? "dfe-vertical-nav__section-item--current" : "")">
-                            <a class="dfe-vertical-nav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="@Url.Action("Index", "Reporting")">
-                                Dashboard
-                            </a>
-                        </li>
-                        <li class="dfe-vertical-nav__section-item @(ViewData["ActiveNavItem"]?.ToString() == "products" ? "dfe-vertical-nav__section-item--current" : "")">
-                            <a class="dfe-vertical-nav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="@Url.Action("Products", "Reporting")">
-                                Your products
-                            </a>
-                        </li>
-                        <li class="dfe-vertical-nav__section-item @(ViewData["ActiveNavItem"]?.ToString() == "performance" ? "dfe-vertical-nav__section-item--current" : "")">
-                            <a class="dfe-vertical-nav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="@Url.Action("Performance", "Reporting")">
-                                Performance reporting
-                            </a>
-                        </li>
-                        <li class="dfe-vertical-nav__section-item @(ViewData["ActiveNavItem"]?.ToString() == "milestones" ? "dfe-vertical-nav__section-item--current" : "")">
-                            <a class="dfe-vertical-nav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="@Url.Action("Milestones", "Reporting")">
-                                Milestones
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
+            <div class="govuk-grid-column-full">
+                <h1 class="govuk-heading-l">My Milestones</h1>
+                <p class="govuk-body">View and manage milestones for your products.</p>
             </div>
+        </div>
 
-            <!-- Main Content -->
-            <div class="govuk-grid-column-three-quarters">
-                <div class="govuk-grid-row">
-                    <div class="govuk-grid-column-two-thirds">
-                        <h2 class="govuk-heading-l">Your products</h2>
-                        <p class="govuk-body">Select a product to view and manage its milestones.</p>
-                    </div>
-                </div>
-
+        <div class="govuk-grid-row">
+            <div class="govuk-grid-column-full">
                 @if (Model != null && Model.Any())
                 {
-                    <div class="govuk-table-container">
-                        <table class="govuk-table">
-                            <thead class="govuk-table__head">
+                    <table class="govuk-table">
+                        <thead class="govuk-table__head">
+                            <tr class="govuk-table__row">
+                                <th class="govuk-table__header">Title</th>
+                                <th class="govuk-table__header">Description</th>
+                                <th class="govuk-table__header">Due Date</th>
+                                <th class="govuk-table__header">Status</th>
+                                <th class="govuk-table__header">RAG Status</th>
+                            </tr>
+                        </thead>
+                        <tbody class="govuk-table__body">
+                            @foreach (var milestone in Model)
+                            {
                                 <tr class="govuk-table__row">
-                                    <th scope="col" class="govuk-table__header">Product</th>
-                                    <th scope="col" class="govuk-table__header">Milestones</th>
+                                    <td class="govuk-table__cell">
+                                        <a href="@Url.Action("Details", new { id = milestone.Id })" class="govuk-link">
+                                            @milestone.Title
+                                        </a>
+                                    </td>
+                                    <td class="govuk-table__cell">@milestone.Description</td>
+                                    <td class="govuk-table__cell">@(milestone.DueDate?.ToString("dd/MM/yyyy") ?? "N/A")</td>
+                                    <td class="govuk-table__cell">
+                                        <span class="govuk-tag govuk-tag--@(milestone.Status.ToLower() == "completed" ? "green" : milestone.Status.ToLower() == "in-progress" ? "blue" : "grey")">
+                                            @milestone.Status
+                                        </span>
+                                    </td>
+                                    <td class="govuk-table__cell">
+                                        <span class="govuk-tag govuk-tag--@(milestone.RagStatus.ToLower() == "green" ? "green" : milestone.RagStatus.ToLower() == "amber" ? "yellow" : "red")">
+                                            @milestone.RagStatus
+                                        </span>
+                                    </td>
                                 </tr>
-                            </thead>
-                            <tbody class="govuk-table__body">
-                                @foreach (dynamic product in Model)
-                                {
-                                    <tr class="govuk-table__row">
-                                        <td class="govuk-table__cell">
-                                            <a href="@Url.Action("Index", "ReportingMilestones", new { productId = product.FipsId })" class="govuk-link">
-                                                @product.ProductName
-                                            </a>
-                                        </td>
-                                        <td class="govuk-table__cell">
-                                            @product.MilestoneCount
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
-                        </table>
-                    </div>
+                            }
+                        </tbody>
+                    </table>
                 }
                 else
                 {
                     <div class="govuk-inset-text">
-                        <p class="govuk-body">You are not currently assigned to any products.</p>
-                        <p class="govuk-body">Contact your administrator to be assigned to products.</p>
+                        <p class="govuk-body">No milestones found.</p>
                     </div>
                 }
             </div>
